--- a/cross_asistent/templates/index.html
+++ b/cross_asistent/templates/index.html
@@ -19,6 +19,7 @@
 {% block content %}
 <main class="main_anchor">
     <!-- Carrousel -->
+    <!-- hola -->
     <div class="swiper-container" id="top">
         <div class="swiper-wrapper">
             {% for banner in banners %}
